--- a/img_desc/templates/img_desc/Instructions.html
+++ b/img_desc/templates/img_desc/Instructions.html
@@ -1,4 +1,4 @@
-{% extends "global/Page.html" %}
+{% extends "otree/Page.html" %}
 {% load otree static %}
 
 {% block title %}
@@ -9,5 +9,5 @@ Instructions
 <h3>Welcome to the main experiment</h3>
 <p>Please read the instructions carefully before continuing.</p>
 
-<button class="btn btn-primary">Next</button>
+{% next_button %}
 {% endblock %}
