--- a/img_desc/templates/img_desc/Results.html
+++ b/img_desc/templates/img_desc/Results.html
@@ -1,13 +1,10 @@
-{% extends "global/Page.html" %}
+{% extends "otree/Page.html" %}
 {% load otree static %}
 
 {% block title %}
-    Page title
+Results
 {% endblock %}
 
 {% block content %}
-
     {% next_button %}
 {% endblock %}
-
-
